# catsy

./: Cargo.toml  README.md  test.txt
src/: main.rs  test_main copy.rs
tests/: integration_test.rs
