[package]
name = "catsy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
assert_cmd = "2.0.14"
clap = { version = "4.5.3", features = ["derive"] }
colored = "2.1.0"
predicates = "3.1.0"
regex = "1.10.4"

